@@ -1,4 +1,4 @@
 module Cocard
   VERSION     = '0.7.5-dev'.freeze
-  RELEASEDATE = '2025-03-14'.freeze
+  RELEASEDATE = '2025-03-15'.freeze
 end
