@@ -210,6 +210,18 @@
 <article class="doc">
 <h1 class="page">Changelog</h1>
 <div class="sect1">
+<h2 id="_0_7_5_dev_unreleased"><a class="anchor" href="#_0_7_5_dev_unreleased"></a>0.7.5-dev - unreleased</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>internes Refactoring bei Funktionen für unterstützte Kartenterminals</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_0_7_4_2025_03_14"><a class="anchor" href="#_0_7_4_2025_03_14"></a>0.7.4 - 2025-03-14</h2>
 <div class="sectionbody">
 <div class="ulist">
