@@ -2,6 +2,8 @@
 
 == 0.7.5-dev - unreleased
 
+* internes Refactoring bei Funktionen für unterstützte Kartenterminals
+
 == 0.7.4 - 2025-03-14
 
 * HOTFIX: Problem beim Reinitialisieren von Tabellen behoben.
